# MultiRequest

./: README.md  pyproject.toml
MultiRequest/: _rate_limit_manager.py  _requester.py  _utils.py  sender.py
MultiRequest/types/: __init__.py  proxy.py  request.py  task.py
multirequest/: _rate_limit_manager.py  _requester.py  sender.py
multirequest/types/: proxy.py  service.py
