[tool.poetry]
name = "multirequest"
version = "0.1.0"
description = ""
authors = ["TraderXylioner <treider.xylioner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
